# proxy-toolkit

./: .gitignore  LICENSE  README.md  main.gradio.py  navigation_interceptor.js  port_proxy.py  pyproject.toml  requirements.txt  server.py  subpath_service_worker.js  subpath_service_worker_enhanced.js  sw_client.js  tunnel_service_worker.js  unified_service_worker.js
.github/workflows/: release.yml
jupyterlab-proxy-toolkit/: README.md  install.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
jupyterlab-proxy-toolkit/jupyterlab_proxy_toolkit/: __init__.py
jupyterlab-proxy-toolkit/jupyterlab_proxy_toolkit/server/: __init__.py  __main__.py
jupyterlab-proxy-toolkit/scripts/: copy-license.js  copy-shared-files.js
jupyterlab-proxy-toolkit/src/: index.ts
jupyterlab-proxy-toolkit/style/: base.css
proxy_toolkit/: __init__.py  __main__.py  navigation_interceptor.js  port_proxy.py  server.py  sw_client.js  unified_service_worker.js
proxy_toolkit/static/: app.js  index.html  style.css
static/: app.js  index.html  style.css
vscode-proxy-toolkit/: .vscodeignore  README.md  package.json
vscode-proxy-toolkit/scripts/: copy-sw-files.js
vscode-proxy-toolkit/src/: commands.ts  extension.ts  proxy-url-resolver.ts  sw-manager.ts  sw-server.ts
