[project]
name = "proxy-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "jupyter-server>=2.17.0",
    "psutil>=7.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyter-server-proxy>=4.4.0",
    "jupyterlab>=4.4.7",
    "notebook>=7.4.5",
]
