[project]
name = "proxy-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "jupyter-core>=5.9.1",
    "psutil>=7.2.1",
]

[dependency-groups]
dev = [
    "jupyter-server-proxy>=4.4.0",
    "jupyterlab>=4.5.1",
]
