[project]
name = "proxy-toolkit"
version = "0.1.0"
description = "Browser Proxy Toolkit - Service Worker URL 重写工具"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
]

[project.scripts]
proxy-toolkit = "proxy_toolkit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxy_toolkit"]

[tool.hatch.build.targets.wheel.sources]
"proxy_toolkit" = "proxy_toolkit"

[tool.hatch.build.targets.sdist]
include = [
    "proxy_toolkit/**",
    "LICENSE",
    "README.md",
]

[dependency-groups]
dev = [
    "jupyter-server-proxy>=4.4.0",
    "jupyterlab>=4.5.1",
    # JupyterLab 扩展构建依赖（用于 --no-isolation 快速构建）
    "build>=1.0.0",
    "hatchling>=1.5.0",
    "hatch-nodejs-version>=0.3.2",
    "hatch-jupyter-builder>=0.5",
]
